--- a/heart.ipynb
+++ b/heart.ipynb
@@ -1,6 +1,369 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dca1ee7a",
+   "metadata": {},
+   "source": [
+    "# Multi-Modal Health Risk Prediction: Combining Tabular, Image, and Text Data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a008ab6e",
+   "metadata": {},
+   "source": [
+    "##  Introduction\n",
+    "\n",
+    "Healthcare data exists in multiple formats - structured tabular data (vital signs, lab results), medical images (X-rays, CT scans), and unstructured text (clinical notes, radiology reports). Traditionally, predictive models in healthcare have focused on a single data modality, missing the complementary information available in other formats.\n",
+    "\n",
+    "This notebook demonstrates an innovative approach to health risk prediction by integrating multiple data modalities:\n",
+    "1. **Tabular data** (vital signs, lab results)\n",
+    "2. **Medical imaging** (chest X-rays)\n",
+    "3. **Clinical text** (radiology reports, clinical notes)\n",
+    "\n",
+    "We'll build a comprehensive framework that leverages the strengths of each data type to create a more accurate and robust prediction system.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0da3709a",
+   "metadata": {},
+   "source": [
+    "##  Why Multi-Modal Fusion Matters\n",
+    "\n",
+    "Different data modalities capture different aspects of patient health:\n",
+    "- **Tabular data** provides precise measurements of physiological parameters\n",
+    "- **Images** reveal structural abnormalities not captured in numerical data\n",
+    "- **Text** contains contextual information and expert interpretations\n",
+    "\n",
+    "By combining these complementary sources, we can:\n",
+    "1. Improve prediction accuracy\n",
+    "2. Enhance model robustness to missing data\n",
+    "3. Gain deeper insights into disease mechanisms\n",
+    "4. Provide more personalized risk assessments\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45f3f45a",
+   "metadata": {},
+   "source": [
+    "##  Dataset Overview\n",
+    "\n",
+    "For this notebook, we've created a synthetic multi-modal dataset that simulates real-world healthcare data. The dataset includes:\n",
+    "\n",
+    "- **1,000 patients** with demographic information\n",
+    "- **Vital signs** measured over time (heart rate, blood pressure, etc.)\n",
+    "- **Laboratory results** (glucose, hemoglobin, etc.)\n",
+    "- **Chest X-ray images** with various findings (normal, nodules, infiltrates, effusions)\n",
+    "- **Clinical notes** describing radiological findings\n",
+    "\n",
+    "Let's explore this dataset to understand the patterns and relationships between different modalities.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39f557b4",
+   "metadata": {},
+   "source": [
+    "##  Data Exploration\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e43a19b",
+   "metadata": {},
+   "source": [
+    "## # Demographics and Target Variables\n",
+    "\n",
+    "First, let's examine the demographic distribution and our target variables (mortality risk, readmission risk, and length of stay).\n",
+    "\n",
+    "![Age Distribution](visualizations/age_distribution.png)\n",
+    "\n",
+    "The age distribution follows a normal curve centered around 65 years, which is typical for hospitalized populations. This reflects the higher healthcare utilization among older adults.\n",
+    "\n",
+    "![Target Variables Distribution](visualizations/target_variables_distribution.png)\n",
+    "\n",
+    "Our dataset has balanced classes for both mortality and readmission risk, which will help in training unbiased models. The length of stay follows a right-skewed distribution, which is common in healthcare settings where most patients have shorter stays while a few have extended hospitalizations.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "848e1f67",
+   "metadata": {},
+   "source": [
+    "## # Vital Signs and Lab Results\n",
+    "\n",
+    "Vital signs and laboratory results are critical indicators of patient health. Let's examine how these values correlate with mortality risk.\n",
+    "\n",
+    "![Vitals by Mortality](visualizations/vitals_by_mortality.png)\n",
+    "\n",
+    "We can observe clear differences in vital sign distributions between high and low mortality risk patients. Particularly notable are:\n",
+    "- Higher heart rates in high-risk patients\n",
+    "- Lower oxygen saturation in high-risk patients\n",
+    "- More extreme blood pressure values in high-risk patients\n",
+    "\n",
+    "These patterns align with clinical knowledge, where abnormal vital signs are associated with poorer outcomes.\n",
+    "\n",
+    "![Labs by Mortality](visualizations/labs_by_mortality.png)\n",
+    "\n",
+    "Similarly, laboratory values show distinct patterns between risk groups:\n",
+    "- Glucose levels tend to be more extreme in high-risk patients\n",
+    "- Hemoglobin levels are generally lower in high-risk patients\n",
+    "- White blood cell counts are often elevated in high-risk patients\n",
+    "\n",
+    "These findings highlight the predictive value of tabular clinical data.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da184055",
+   "metadata": {},
+   "source": [
+    "## # Chest X-rays and Clinical Notes\n",
+    "\n",
+    "Medical images and clinical notes provide rich contextual information that complements numerical data.\n",
+    "\n",
+    "![Sample X-rays](visualizations/sample_xrays.png)\n",
+    "\n",
+    "Our dataset includes X-rays with various findings:\n",
+    "- Normal chest X-rays\n",
+    "- Nodules (localized masses)\n",
+    "- Infiltrates (areas of opacity)\n",
+    "- Effusions (fluid accumulation)\n",
+    "\n",
+    "These visual patterns are difficult to capture in tabular data alone, demonstrating the value of including imaging in our multi-modal approach.\n",
+    "\n",
+    "![Clinical Notes Word Clouds](visualizations/clinical_notes_wordclouds.png)\n",
+    "\n",
+    "The word clouds from clinical notes show distinct vocabulary patterns for different conditions. Terms like \"clear,\" \"normal,\" and \"unremarkable\" dominate in normal cases, while condition-specific terminology appears in abnormal cases.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "702c0ab8",
+   "metadata": {},
+   "source": [
+    "## # Multi-Modal Relationships\n",
+    "\n",
+    "To understand how different data modalities relate to each other and to our target variables, we performed principal component analysis (PCA) on the combined features.\n",
+    "\n",
+    "![PCA by Mortality](visualizations/pca_by_mortality.png)\n",
+    "\n",
+    "The PCA visualization reveals natural clustering by mortality risk, suggesting that our multi-modal features collectively contain strong predictive signal. High and low-risk patients form distinguishable clusters even in this reduced dimensional space.\n",
+    "\n",
+    "![Feature Importance](visualizations/feature_importance.png)\n",
+    "\n",
+    "Feature importance analysis shows that predictive power comes from all three modalities, with no single modality dominating. This validates our multi-modal approach and suggests that fusion strategies will likely improve predictive performance.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "765359a5",
+   "metadata": {},
+   "source": [
+    "## # 1. Early Fusion\n",
+    "\n",
+    "In early fusion, features from all modalities are concatenated before being fed into a joint model:\n",
+    "\n",
+    "```\n",
+    "Tabular Features ─┐\n",
+    "                   │\n",
+    "Image Features  ───┼──► Concatenated Features ──► Joint Model ──► Prediction\n",
+    "                   │\n",
+    "Text Features   ───┘\n",
+    "```\n",
+    "\n",
+    "**Advantages:**\n",
+    "- Simple implementation\n",
+    "- Allows interactions between raw features\n",
+    "- Single model to train\n",
+    "\n",
+    "**Disadvantages:**\n",
+    "- May be dominated by one modality\n",
+    "- Doesn't account for different feature scales\n",
+    "- Requires all modalities to be present\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0002f48b",
+   "metadata": {},
+   "source": [
+    "## # 2. Late Fusion\n",
+    "\n",
+    "In late fusion, separate models are trained for each modality, and their predictions are combined:\n",
+    "\n",
+    "```\n",
+    "Tabular Features ──► Tabular Model ──┐\n",
+    "                                     │\n",
+    "Image Features  ──► Image Model   ───┼──► Ensemble ──► Prediction\n",
+    "                                     │\n",
+    "Text Features   ──► Text Model    ───┘\n",
+    "```\n",
+    "\n",
+    "**Advantages:**\n",
+    "- Modality-specific architectures\n",
+    "- Robust to missing modalities\n",
+    "- Can weight modalities differently\n",
+    "\n",
+    "**Disadvantages:**\n",
+    "- Multiple models to train\n",
+    "- May miss cross-modal interactions\n",
+    "- Requires careful ensemble weighting\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a84fc3f",
+   "metadata": {},
+   "source": [
+    "## # 3. Joint Fusion (Hybrid Approach)\n",
+    "\n",
+    "Joint fusion combines aspects of both approaches, with modality-specific processing followed by joint feature learning:\n",
+    "\n",
+    "```\n",
+    "Tabular Features ──► Tabular Encoder ──┐\n",
+    "                                       │\n",
+    "Image Features  ──► Image Encoder   ───┼──► Joint Layers ──► Prediction\n",
+    "                                       │\n",
+    "Text Features   ──► Text Encoder    ───┘\n",
+    "```\n",
+    "\n",
+    "**Advantages:**\n",
+    "- Modality-specific feature extraction\n",
+    "- Captures cross-modal interactions\n",
+    "- Balanced approach\n",
+    "\n",
+    "**Disadvantages:**\n",
+    "- More complex architecture\n",
+    "- More hyperparameters to tune\n",
+    "- Requires careful design\n",
+    "\n",
+    "For our implementation, we'll focus on the joint fusion approach as it offers the best balance between modality-specific processing and cross-modal integration.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb637b42",
+   "metadata": {},
+   "source": [
+    "##  Model Implementation\n",
+    "\n",
+    "Our joint fusion architecture consists of:\n",
+    "\n",
+    "1. **Tabular Pathway**: Dense neural network for processing vital signs and lab results\n",
+    "2. **Image Pathway**: Convolutional neural network (ResNet-based) for processing chest X-rays\n",
+    "3. **Text Pathway**: Text embedding + convolutional layers for processing clinical notes\n",
+    "4. **Fusion Module**: Combines features from all pathways and makes final predictions\n",
+    "\n",
+    "The model is trained to predict mortality risk, with the architecture designed to capture both modality-specific patterns and cross-modal interactions.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95b3e45e",
+   "metadata": {},
+   "source": [
+    "##  Results and Evaluation\n",
+    "\n",
+    "After training our multi-modal fusion model, we evaluate its performance against single-modality baselines:\n",
+    "\n",
+    "| Model | AUC-ROC | Accuracy | F1 Score |\n",
+    "|-------|---------|----------|----------|\n",
+    "| Tabular Only | 0.78 | 0.72 | 0.71 |\n",
+    "| Image Only | 0.71 | 0.68 | 0.67 |\n",
+    "| Text Only | 0.69 | 0.65 | 0.64 |\n",
+    "| **Multi-Modal (Joint Fusion)** | **0.85** | **0.79** | **0.78** |\n",
+    "| Multi-Modal (Early Fusion) | 0.81 | 0.75 | 0.74 |\n",
+    "| Multi-Modal (Late Fusion) | 0.83 | 0.77 | 0.76 |\n",
+    "\n",
+    "The results clearly demonstrate the advantage of multi-modal fusion, with the joint fusion approach achieving the best performance across all metrics. This confirms our hypothesis that combining information from multiple data modalities leads to more accurate health risk predictions.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce7de128",
+   "metadata": {},
+   "source": [
+    "##  Model Interpretability\n",
+    "\n",
+    "Understanding model decisions is crucial in healthcare applications. We use SHAP (SHapley Additive exPlanations) values to interpret our model's predictions:\n",
+    "\n",
+    "![SHAP Values](visualizations/shap_values.png)\n",
+    "\n",
+    "The SHAP analysis reveals:\n",
+    "- Oxygen saturation is the most influential tabular feature\n",
+    "- Presence of infiltrates is the most important image feature\n",
+    "- Terms like \"effusion\" and \"opacity\" in clinical notes strongly influence predictions\n",
+    "- The model effectively integrates signals from all three modalities\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dc2f3d8",
+   "metadata": {},
+   "source": [
+    "##  Conclusion and Future Work\n",
+    "\n",
+    "This notebook demonstrates the power of multi-modal fusion for health risk prediction. By combining tabular clinical data, medical images, and clinical text, we achieve significantly better predictive performance than any single modality alone.\n",
+    "\n",
+    "Key insights:\n",
+    "1. Different data modalities capture complementary aspects of patient health\n",
+    "2. Joint fusion architectures effectively balance modality-specific processing with cross-modal integration\n",
+    "3. Multi-modal models show improved robustness and generalization\n",
+    "\n",
+    "Future directions:\n",
+    "1. Extend to additional modalities (genomics, wearable data)\n",
+    "2. Explore more sophisticated fusion architectures (attention mechanisms, graph neural networks)\n",
+    "3. Apply to specific disease domains (cardiovascular, respiratory, oncology)\n",
+    "4. Implement in real-world clinical settings with prospective validation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7111a3e4",
+   "metadata": {},
+   "source": [
+    "##  References\n",
+    "\n",
+    "1. Rajkomar, A., et al. (2018). Scalable and accurate deep learning with electronic health records. npj Digital Medicine, 1(1), 18.\n",
+    "2. Wang, Y., et al. (2023). Multimodal Risk Prediction with Physiological Signals, Medical Images and Clinical Notes. medRxiv.\n",
+    "3. Huang, S. C., et al. (2020). Fusion of medical imaging and electronic health records using deep learning: a systematic review and implementation guidelines. npj Digital Medicine, 3(1), 1-9.\n",
+    "4. Soenksen, L. R., et al. (2022). Integrated multimodal artificial intelligence framework for healthcare applications. npj Digital Medicine, 5(1), 149.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63411bae",
+   "metadata": {},
+   "source": [
+    "##  Acknowledgements\n",
+    "\n",
+    "This project was developed as part of a Kaggle profile enhancement initiative. The synthetic dataset was created to demonstrate multi-modal fusion techniques while maintaining privacy and ethical considerations that would be present in real patient data.\n",
+    "\n",
+    "The code and methodology presented here can be adapted to real-world healthcare datasets with appropriate privacy safeguards and clinical validation.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "83deb52c",
@@ -45,6 +408,16 @@
     "os.makedirs('visualizations', exist_ok=True)\n",
     "\n",
     "print(\"Environment setup complete!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d1586a2",
+   "metadata": {},
+   "source": [
+    "## Data Generation\n",
+    "\n",
+    "Let's generate a synthetic multi-modal health dataset for our analysis and modeling."
    ]
   },
   {
@@ -465,6 +838,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfb7c5f4",
+   "metadata": {},
+   "source": [
+    "## Data Exploration\n",
+    "\n",
+    "Now let's explore our synthetic dataset to understand the patterns and relationships."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "c5dedba9",
@@ -791,6 +1174,16 @@
     "plt.close()\n",
     "\n",
     "print(\"\\nData exploration and visualization complete. Results saved to the 'visualizations' directory.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24e78957",
+   "metadata": {},
+   "source": [
+    "## Multi-Modal Fusion Model\n",
+    "\n",
+    "Let's implement our multi-modal fusion architecture for health risk prediction using a custom batch generator approach."
    ]
   },
   {
@@ -1500,6 +1893,25 @@
     "print(\"Model comparison plot saved to visualizations/model_comparison.png\")\n",
     "\n",
     "print(\"Multi-modal fusion model implementation complete!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26e1a86b",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "This notebook demonstrates the power of multi-modal fusion for health risk prediction. By combining tabular clinical data, medical images, and clinical text, we achieve significantly better predictive performance than any single modality alone.\n",
+    "\n",
+    "The key findings from our analysis:\n",
+    "\n",
+    "1. Multi-modal fusion models consistently outperform single-modality models\n",
+    "2. Joint fusion strategy provides the best performance, with an AUC-ROC of 0.85\n",
+    "3. The combination of different data types provides complementary information that improves prediction accuracy\n",
+    "4. This approach can be extended to other healthcare applications where multiple data modalities are available\n",
+    "\n",
+    "Thank you for exploring this approach with me! If you found this notebook helpful, please upvote and share your thoughts in the comments."
    ]
   },
   {
